# git-taxbreak

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.rst  README.rst  changelog.html  contents.html  examples.html  genindex.html  git_taxbreak.py  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  deploy.yml  lint.yml  pythonpackage.yml  validate_commit.yml
_modules/: index.html
_modules/git_taxbreak/: cmd.html
_modules/git_taxbreak/modules/: argument_parser.html  artifacts_collector.html  writter.html
_sources/source/: git_taxbreak.modules.rst.txt
changelog/: 12.improvement  _templates.rst
doc/en/: conf.py  contents.rst  examples.rst  getting-started.rst  index.rst  intro.rst
doc/en/source/: git_taxbreak.rst
source/: git_taxbreak.html  git_taxbreak.modules.html
src/git_taxbreak/: cmd.py
src/git_taxbreak/modules/: argument_parser.py  artifacts_collector.py  writer.py  writter.py
tests/: test_argument_parser.py  test_artifacts_collector.py  test_cmd.py  test_git_taxbreak.py  test_writer.py  test_writter.py
tests/ut/: test_git_taxbreak.py
