[metadata]

name = git-taxbreak
description = git-taxbreak: tool for collect artifacts from git for register creative work
description-file = README.rst
url = https://github.com/kluczak/git-taxbreak

project_urls =
    Source=https://github.com/kamil1b/git-taxbreak
    Tracker=https://github.com/kamil1b/git-taxbreak/issues

author = Kamil Luczak
author_email = kamilluczak@luczakweb.pl

license = MIT license
license_file = LICENSE
keywords = git, taxbreak, tool
classifiers =
    Development Status :: 3 Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    # Operating System :: Microsoft :: Windows
    # Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
platforms = unix, linux

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    git-taxbreak = git_taxbreak.cmd:main

[bdist_wheel]
universal = 1
